# third_party_eudev

./: BUILD.gn  OAT.xml  README.OpenSource  README.md  README_zh.md  bundle.json  configure  udevd.rc
hm_src/: config.h  hm-missing.h  keyboard-keys-from-name.h  keyboard-keys-to-name.h  log.c
rules.d/: touchscreen.rules  vk.rules
src/libudev/: libudev-monitor.c
src/shared/: conf-files.c  missing.h
src/udev/: udev-event.c  udevadm-monitor.c  udevadm-trigger.c  udevd.c
